Fixed ideas listing header overflow.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -196,7 +196,8 @@ input[type=submit] {
 }
 
 .ideas > .idea > .info, .ideas > .idea > .content {
-  height: 80px;
+  height: 160px;
+  overflow: hidden;
 }
 
 .top_ideas > .idea {
